--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -56,7 +56,7 @@ jobs:
           echo "  - image: $IMAGE_ID-arm64:$PETSC_VERSION " >> config.version.yaml
           echo "    platform: " >> config.version.yaml
           echo "      architecture: arm64 " >> config.version.yaml
-          echo "      os: linux " >> config.version.yaml " >> config.version.yaml
+          echo "      os: linux " >> config.version.yaml
           echo "  - image: $IMAGE_ID-amd64:$PETSC_VERSION " >> config.version.yaml
           echo "    platform: " >> config.version.yaml
           echo "      os: linux " >> config.version.yaml
