--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -49,7 +49,6 @@ jobs:
           IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME${{matrix.compiler.id}}${{ matrix.indices.id}}
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
 
-          
           # Write the config to the file
           echo "image: $IMAGE_ID:$PETSC_VERSION" > config.version.yaml
           echo "manifests:" >> config.version.yaml
@@ -64,6 +63,21 @@ jobs:
         
           # Generate the manifest and push
           manifest-tool/manifest-tool push from-spec config.version.yaml
+        
+          # Repeat for the latest tag
+          echo "image: $IMAGE_ID:latest" > config.latest.yaml
+          echo "manifests:" >> config.latest.yaml
+          echo "  - image: $IMAGE_ID-arm64:$PETSC_VERSION " >> config.latest.yaml
+          echo "    platform: " >> config.latest.yaml
+          echo "      architecture: arm64 " >> config.latest.yaml
+          echo "      os: linux " >> config.latest.yaml
+          echo "  - image: $IMAGE_ID-amd64:$PETSC_VERSION " >> config.latest.yaml
+          echo "    platform: " >> config.latest.yaml
+          echo "      architecture: amd64 " >> config.latest.yaml
+          echo "      os: linux " >> config.latest.yaml
+        
+          # Generate the manifest and push
+          manifest-tool/manifest-tool push from-spec config.latest.yaml
         
 #           docker manifest create \
 #             $IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
