added back par support

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -41,6 +41,8 @@ jobs:
   test-matrix:
     needs: [ get-version ]
     strategy:
+      fail-fast: false
+      max-parallel: 2
       matrix:
         arch: [ { runson: ARM64, id: -arm64 }, { runson: ubuntu-latest, id: -amd64 } ]
         compiler: [ { cc: gcc, cxx: g++, id: -gcc }, { cc: clang, cxx: clang++, id: -clang } ]
@@ -104,6 +106,8 @@ jobs:
     needs: [get-version, test]
     if: github.event_name != 'pull_request'
     strategy:
+      max-parallel: 2
+      fail-fast: false
       matrix:
         arch: [ { runson: ARM64, id: -arm64 }, { runson: ubuntu-latest, id: -amd64 } ]
         compiler: [ { cc: gcc, cxx: g++, id: -gcc }, { cc: clang, cxx: clang++, id: -clang } ]
