--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -86,8 +86,8 @@ jobs:
             --build-arg PETSC_BUILD_COMMIT=${{ needs.get-version.outputs.petsc_commit}} \
             --build-arg CC=${{matrix.compiler.cc}} \
             --build-arg CXX=${{matrix.compiler.cxx}} \
-            --build-arg DEBUGFLAGS=${{matrix.compiler.debugFlags}} \
-            --build-arg CXXOPTFLAGS=${{matrix.compiler.optFlags}} \
+            --build-arg DEBUGFLAGS="${{matrix.compiler.debugFlags}}" \
+            --build-arg CXXOPTFLAGS="${{matrix.compiler.optFlags}}" \
             --build-arg Index64Bit=${{matrix.indices.index64bit}} \
             --tag $IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
             --load \
@@ -154,8 +154,8 @@ jobs:
             --build-arg PETSC_BUILD_COMMIT=${{ needs.get-version.outputs.petsc_commit}} \
             --build-arg CC=${{ matrix.compiler.cc}} \
             --build-arg CXX=${{ matrix.compiler.cxx}} \
-            --build-arg DEBUGFLAGS=${{matrix.compiler.debugFlags}} \
-            --build-arg CXXOPTFLAGS=${{matrix.compiler.optFlags}} \
+            --build-arg DEBUGFLAGS="${{matrix.compiler.debugFlags}}" \
+            --build-arg CXXOPTFLAGS="${{matrix.compiler.optFlags}}" \
             --build-arg Index64Bit=${{ matrix.indices.index64bit}} \
             --push \
             --tag $IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
