--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -50,7 +50,7 @@ jobs:
       max-parallel: 1
       matrix:
         arch: [ { runson: ARM64, id: -arm64 }, { runson: ubuntu-latest, id: -amd64 } ]
-        compiler: [ { cc: gcc, cxx: g++, id: -gcc }, { cc: clang, cxx: clang++, id: -clang } ]
+        compiler: [ { cc: gcc, cxx: g++, debugFlags: "-g -O0 -fsanitize=address",  optFlags: "-g -O -fsanitize=address", id: -gcc }, { cc: clang, cxx: clang++, debugFlags: "-g -O0",  optFlags: "-g -O3",  id: -clang } ]
         indices: [ { index64bit: 0, id: "" },  { index64bit: 1, id: "-index64" } ]
 
     runs-on: ${{ matrix.arch.runson }}
@@ -86,6 +86,8 @@ jobs:
             --build-arg PETSC_BUILD_COMMIT=${{ needs.get-version.outputs.petsc_commit}} \
             --build-arg CC=${{matrix.compiler.cc}} \
             --build-arg CXX=${{matrix.compiler.cxx}} \
+            --build-arg DEBUGFLAGS="${{matrix.compiler.debugFlags}}" \
+            --build-arg CXXOPTFLAGS="${{matrix.compiler.optFlags}}" \
             --build-arg Index64Bit=${{matrix.indices.index64bit}} \
             --tag $IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
             --load \
@@ -114,7 +116,7 @@ jobs:
       fail-fast: false
       matrix:
         arch: [ { runson: ARM64, id: -arm64 }, { runson: ubuntu-latest, id: -amd64 } ]
-        compiler: [ { cc: gcc, cxx: g++, id: -gcc }, { cc: clang, cxx: clang++, id: -clang } ]
+        compiler: [ { cc: gcc, cxx: g++, debugFlags: "-g -O0 -fsanitize=address",  optFlags: "-g -O -fsanitize=address", id: -gcc }, { cc: clang, cxx: clang++, debugFlags: "-g -O0",  optFlags: "-g -O3",  id: -clang } ]
         indices: [ { index64bit: 0, id: "" },  { index64bit: 1, id: "-index64" } ]
 
     runs-on: ${{ matrix.arch.runson }}
@@ -152,6 +154,8 @@ jobs:
             --build-arg PETSC_BUILD_COMMIT=${{ needs.get-version.outputs.petsc_commit}} \
             --build-arg CC=${{ matrix.compiler.cc}} \
             --build-arg CXX=${{ matrix.compiler.cxx}} \
+            --build-arg DEBUGFLAGS="${{matrix.compiler.debugFlags}}" \
+            --build-arg CXXOPTFLAGS="${{matrix.compiler.optFlags}}" \
             --build-arg Index64Bit=${{ matrix.indices.index64bit}} \
             --push \
             --tag $IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
