--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,9 +17,6 @@ on:
   workflow_dispatch:
   # Allow this event to be triggered in the github ui
 
-  # Run tests for any PRs.
-  pull_request:
-
 # only allow one test per PR to be run
 concurrency:
   group: ${{ github.head_ref || github.ref_name }}
@@ -41,10 +38,80 @@ jobs:
     outputs:
       petsc_commit: ${{ steps.version.outputs.petsc_commit }}
 
-  # Run tests.
+  # Always build and push the latest package to github packages.  It does not matter if it works with ablate or not
+  build:
+    needs: [get-version]
+    strategy:
+      max-parallel: 2
+      fail-fast: false
+      matrix:
+        arch: [ { runson: ARM64, id: -arm64 }, { runson: ubuntu-latest, id: -amd64 } ]
+        compiler: [ { cc: gcc, cxx: g++, debugFlags: "-g -O0 -fsanitize=address",  optFlags: "-g -O -fsanitize=address", id: -gcc }, { cc: clang, cxx: clang++, debugFlags: "-g -O0",  optFlags: "-g -O3",  id: -clang } ]
+        indices: [ { index64bit: 0, id: "" },  { index64bit: 1, id: "-index64" } ]
+
+    runs-on: ${{ matrix.arch.runson }}
+
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: checkout code
+        uses: actions/checkout@v3
+
+      - name: Cache Docker layers
+        uses: actions/cache@v3
+        id: cache
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}${{ matrix.compiler.id }}${{ matrix.indices.id }}-buildx-${{ github.sha }}${{ matrix.arch.id }}
+          restore-keys: |
+            ${{ runner.os }}${{ matrix.compiler.id }}${{ matrix.indices.id }}${{ matrix.arch.id }}-buildx-
+
+      - name: Log into registry
+        run: echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ secrets.DOCKER_USER }} --password-stdin
+
+      - name: Check if petsc version docker exisit
+        run: |
+          # Define the base image id
+          IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME${{matrix.compiler.id}}${{ matrix.indices.id}}${{matrix.arch.id}}
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+
+          # check if image exists 
+          if docker manifest inspect $IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} > /dev/null; then
+            echo "Docker Image ${IMAGE_ID} exists"
+            echo "petsc_docker_require_build=false" >> "$GITHUB_ENV"
+          else
+            echo "Docker Image ${IMAGE_ID} has not been built before"
+            echo "petsc_docker_require_build=true" >> "$GITHUB_ENV"
+          fi
+
+      - name: Build image if needed
+        if: env.petsc_docker_require_build == 'true'
+        run: |
+          # define the image id
+          IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME${{matrix.compiler.id}}${{ matrix.indices.id}}${{matrix.arch.id}}
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+          echo IMAGE_ID=$IMAGE_ID
+          echo VERSION=${{ needs.get-version.outputs.petsc_commit}}
+          
+          # Build the image
+          docker buildx build .\
+            --provenance false \
+            --build-arg PETSC_BUILD_COMMIT=${{ needs.get-version.outputs.petsc_commit}} \
+            --build-arg CC=${{ matrix.compiler.cc}} \
+            --build-arg CXX=${{ matrix.compiler.cxx}} \
+            --build-arg DEBUGFLAGS="${{matrix.compiler.debugFlags}}" \
+            --build-arg OPTFLAGS="${{matrix.compiler.optFlags}}" \
+            --build-arg Index64Bit=${{ matrix.indices.index64bit}} \
+            --push \
+            --tag $IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
+            --file Dockerfile 
+  
+
+  # Run tests on the latest pushed image
   # See also https://docs.docker.com/docker-hub/builds/automated-testing/
   test-matrix:
-    needs: [ get-version ]
+    needs: [ get-version, build ]
     strategy:
       fail-fast: false
       max-parallel: 1
@@ -80,22 +147,6 @@ jobs:
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=${{ needs.get-version.outputs.petsc_commit}}
           
-          # build the petsc-image
-          docker buildx build .\
-            --provenance false \
-            --build-arg PETSC_BUILD_COMMIT=${{ needs.get-version.outputs.petsc_commit}} \
-            --build-arg CC=${{matrix.compiler.cc}} \
-            --build-arg CXX=${{matrix.compiler.cxx}} \
-            --build-arg DEBUGFLAGS="${{matrix.compiler.debugFlags}}" \
-            --build-arg CXXOPTFLAGS="${{matrix.compiler.optFlags}}" \
-            --build-arg Index64Bit=${{matrix.indices.index64bit}} \
-            --tag $IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
-            --load \
-            --file Dockerfile 
-
-          # List local images
-          docker image ls
-
           # Build the image
           docker build .\
             --build-arg PETSC_BASE_IMAGE=$IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
@@ -107,66 +158,10 @@ jobs:
     steps:
       - run: echo All tests Successful!
 
-  # Push image to GitHub Packages.
-  build:
-    needs: [get-version, test]
-    if: github.event_name != 'pull_request'
-    strategy:
-      max-parallel: 2
-      fail-fast: false
-      matrix:
-        arch: [ { runson: ARM64, id: -arm64 }, { runson: ubuntu-latest, id: -amd64 } ]
-        compiler: [ { cc: gcc, cxx: g++, debugFlags: "-g -O0 -fsanitize=address",  optFlags: "-g -O -fsanitize=address", id: -gcc }, { cc: clang, cxx: clang++, debugFlags: "-g -O0",  optFlags: "-g -O3",  id: -clang } ]
-        indices: [ { index64bit: 0, id: "" },  { index64bit: 1, id: "-index64" } ]
-
-    runs-on: ${{ matrix.arch.runson }}
-
-    steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: checkout code
-        uses: actions/checkout@v3
-
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        id: cache
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}${{ matrix.compiler.id }}${{ matrix.indices.id }}-buildx-${{ github.sha }}${{ matrix.arch.id }}
-          restore-keys: |
-            ${{ runner.os }}${{ matrix.compiler.id }}${{ matrix.indices.id }}${{ matrix.arch.id }}-buildx-
-
-      - name: Log into registry
-        run: echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ secrets.DOCKER_USER }} --password-stdin
-
-      - name: Build image
-        run: |
-          # define the image id
-          IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME${{matrix.compiler.id}}${{ matrix.indices.id}}${{matrix.arch.id}}
-          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-          echo IMAGE_ID=$IMAGE_ID
-          echo VERSION=${{ needs.get-version.outputs.petsc_commit}}
-          
-          # Build the image
-          docker buildx build .\
-            --provenance false \
-            --build-arg PETSC_BUILD_COMMIT=${{ needs.get-version.outputs.petsc_commit}} \
-            --build-arg CC=${{ matrix.compiler.cc}} \
-            --build-arg CXX=${{ matrix.compiler.cxx}} \
-            --build-arg DEBUGFLAGS="${{matrix.compiler.debugFlags}}" \
-            --build-arg CXXOPTFLAGS="${{matrix.compiler.optFlags}}" \
-            --build-arg Index64Bit=${{ matrix.indices.index64bit}} \
-            --push \
-            --tag $IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
-            --file Dockerfile \
-  
-
-  # Push the latest tag if everything build.  Note this must run on max-parallel=1
+  # Push the latest tag if everything build and tested.  Note this must run on max-parallel=1
   push-latest:
-    needs: [ get-version, build ]
+    needs: [ get-version, test ]
     runs-on: ubuntu-latest
-    if: github.event_name != 'pull_request'
     strategy:
       max-parallel: 1
       matrix:
