--- a/.github/workflows/petsc-docker-pr.yml
+++ b/.github/workflows/petsc-docker-pr.yml
@@ -33,7 +33,10 @@ jobs:
       fail-fast: false
       matrix:
         arch: [ { runson: ARM64, id: -arm64 }, { runson: ubuntu-latest, id: -amd64 } ]
-        compiler: [ { cc: gcc, cxx: g++, id: -gcc }, { cc: clang, cxx: clang++, id: -clang } ]
+        compiler: [ 
+            { cc: gcc, cxx: g++, debugFlags: "-g -O0 -fsanitize=address",  optFlags: "-g -O -fsanitize=address", id: -gcc-asan },
+            { cc: gcc, cxx: g++, debugFlags: "-g -O0",  optFlags: "-g -O", id: -gcc },
+            { cc: clang, cxx: clang++, debugFlags: "-g -O0",  optFlags: "-g -O3",  id: -clang } ]
         indices: [ { index64bit: 0, id: "" },  { index64bit: 1, id: "-index64" } ]
 
     runs-on: ${{ matrix.arch.runson }}
@@ -60,6 +63,8 @@ jobs:
             --build-arg PETSC_BUILD_COMMIT=${{ needs.get-version.outputs.petsc_commit}} \
             --build-arg CC=${{matrix.compiler.cc}} \
             --build-arg CXX=${{matrix.compiler.cxx}} \
+            --build-arg DEBUGFLAGS="${{matrix.compiler.debugFlags}}" \
+            --build-arg OPTFLAGS="${{matrix.compiler.optFlags}}" \
             --build-arg Index64Bit=${{matrix.indices.index64bit}} \
             --tag $IMAGE_ID:${{ needs.get-version.outputs.petsc_commit}} \
             --load \
