removed asan from arm for now

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -110,11 +110,15 @@ jobs:
       matrix:
         arch: [ { runson: ARM64, id: -arm64 }, { runson: ubuntu-latest, id: -amd64 } ]
         compiler: [ 
-            { cc: gcc, cxx: g++, debugFlags: "-g -O0 -fsanitize=address",  optFlags: "-g -O -fsanitize=address", id: -gcc-asan },
             { cc: gcc, cxx: g++, debugFlags: "-g -O0",  optFlags: "-g -O", id: -gcc },
             { cc: clang, cxx: clang++, debugFlags: "-g -O0",  optFlags: "-g -O3",  id: -clang } ]
         indices: [ { index64bit: 0, id: "" },  { index64bit: 1, id: "-index64" } ]
-
+        include:
+          # only run the fsanitize on amd to save ub resources 
+          - arch: { runson: ubuntu-latest, id: -amd64 }
+            compiler: { cc: gcc, cxx: g++, debugFlags: "-g -O0 -fsanitize=address",  optFlags: "-g -O -fsanitize=address", id: -gcc-asan }
+            
+        
     runs-on: ${{ matrix.arch.runson }}
 
     steps:
@@ -152,8 +156,13 @@ jobs:
       max-parallel: 1
       matrix:
         arch: [ { runson: ARM64, id: -arm64 }, { runson: ubuntu-latest, id: -amd64 } ]
-        compiler: [ {id: -gcc }, { id: -clang }, {id: -gcc-asan} ]
+        compiler: [ {id: -gcc }, { id: -clang } ]
         indices: [ { index64bit: 0, id: "" },  { index64bit: 1, id: "-index64" } ]
+        include:
+          # only run the fsanitize on amd to save ub resources 
+          - arch: { runson: ubuntu-latest, id: -amd64 } 
+            compiler: {id: -gcc-asan}
+            
 
     steps:
       - name: Set up Docker Buildx
