--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -53,9 +53,11 @@ jobs:
           # only run the fsanitize on amd to save ub resources 
           - arch: { runson: ubuntu-latest, id: -amd64 }
             compiler: { cc: gcc, cxx: g++, debugFlags: "-g -O0 -fsanitize=address",  optFlags: "-g -O -fsanitize=address", id: -gcc-asan }
-            
+            indices: [ { index64bit: 0, id: "" } ]
+          - arch: { runson: ubuntu-latest, id: -amd64 }
+            compiler: { cc: gcc, cxx: g++, debugFlags: "-g -O0 -fsanitize=address",  optFlags: "-g -O -fsanitize=address", id: -gcc-asan }
+            indices: [ { index64bit: 1, id: "-index64" } ]
         
-
     runs-on: ${{ matrix.arch.runson }}
 
     steps:
@@ -122,7 +124,11 @@ jobs:
           # only run the fsanitize on amd to save ub resources 
           - arch: { runson: ubuntu-latest, id: -amd64 }
             compiler: { cc: gcc, cxx: g++, debugFlags: "-g -O0 -fsanitize=address",  optFlags: "-g -O -fsanitize=address", id: -gcc-asan }
-            
+            indices: [ { index64bit: 0, id: "" } ]
+          - arch: { runson: ubuntu-latest, id: -amd64 }
+            compiler: { cc: gcc, cxx: g++, debugFlags: "-g -O0 -fsanitize=address",  optFlags: "-g -O -fsanitize=address", id: -gcc-asan }
+            indices: [ { index64bit: 1, id: "-index64" } ]
+        
         
     runs-on: ${{ matrix.arch.runson }}
 
@@ -167,7 +173,10 @@ jobs:
           # only run the fsanitize on amd to save ub resources 
           - arch: { runson: ubuntu-latest, id: -amd64 } 
             compiler: {id: -gcc-asan}
-            
+            indices: [ { index64bit: 0, id: "" } ]
+          - arch: { runson: ubuntu-latest, id: -amd64 } 
+            compiler: {id: -gcc-asan}
+            indices: [  { index64bit: 1, id: "-index64" } ]
 
     steps:
       - name: Set up Docker Buildx
