--- a/.github/workflows/petsc-docker-pr.yml
+++ b/.github/workflows/petsc-docker-pr.yml
@@ -47,7 +47,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Clean up Docker images
-        if:  ${{ matrix.arch.clean == 'true' }}
+        if:  ${{ matrix.arch.clean }}
         run: docker system prune --volumes --force
 
       - name: Run Build the test petsc and ablate images
