--- a/.github/workflows/petsc-docker-pr.yml
+++ b/.github/workflows/petsc-docker-pr.yml
@@ -32,7 +32,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        arch: [ { runson: ARM64, id: -arm64, clean: false }, { runson: ubuntu-latest, id: -amd64, clean: true } ]
+        arch: [ { runson: ARM64, id: -arm64}, { runson: ubuntu-latest, id: -amd64 } ]
         compiler: [ 
             { cc: gcc, cxx: g++, debugFlags: "-g -O0",  optFlags: "-g -O", id: -gcc },
             { cc: clang, cxx: clang++, debugFlags: "-g -O0",  optFlags: "-g -O3",  id: -clang } ]
@@ -45,10 +45,6 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - uses: actions/checkout@v3
-
-      - name: Clean up Docker images
-        if:  ${{ matrix.arch.clean }}
-        run: docker system prune --volumes --force
 
       - name: Run Build the test petsc and ablate images
         # don't run the tests if this was manually pushed
