--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -53,10 +53,10 @@ jobs:
           # only run the fsanitize on amd to save ub resources 
           - arch: { runson: ubuntu-latest, id: -amd64 }
             compiler: { cc: gcc, cxx: g++, debugFlags: "-g -O0 -fsanitize=address",  optFlags: "-g -O -fsanitize=address", id: -gcc-asan }
-            indices: [ { index64bit: 0, id: "" } ]
+            indices: { index64bit: 0, id: "" } 
           - arch: { runson: ubuntu-latest, id: -amd64 }
             compiler: { cc: gcc, cxx: g++, debugFlags: "-g -O0 -fsanitize=address",  optFlags: "-g -O -fsanitize=address", id: -gcc-asan }
-            indices: [ { index64bit: 1, id: "-index64" } ]
+            indices: { index64bit: 1, id: "-index64" } 
         
     runs-on: ${{ matrix.arch.runson }}
 
@@ -124,10 +124,10 @@ jobs:
           # only run the fsanitize on amd to save ub resources 
           - arch: { runson: ubuntu-latest, id: -amd64 }
             compiler: { cc: gcc, cxx: g++, debugFlags: "-g -O0 -fsanitize=address",  optFlags: "-g -O -fsanitize=address", id: -gcc-asan }
-            indices: [ { index64bit: 0, id: "" } ]
+            indices: { index64bit: 0, id: "" }
           - arch: { runson: ubuntu-latest, id: -amd64 }
             compiler: { cc: gcc, cxx: g++, debugFlags: "-g -O0 -fsanitize=address",  optFlags: "-g -O -fsanitize=address", id: -gcc-asan }
-            indices: [ { index64bit: 1, id: "-index64" } ]
+            indices: { index64bit: 1, id: "-index64" }
         
         
     runs-on: ${{ matrix.arch.runson }}
@@ -173,10 +173,10 @@ jobs:
           # only run the fsanitize on amd to save ub resources 
           - arch: { runson: ubuntu-latest, id: -amd64 } 
             compiler: {id: -gcc-asan}
-            indices: [ { index64bit: 0, id: "" } ]
+            indices: { index64bit: 0, id: "" }
           - arch: { runson: ubuntu-latest, id: -amd64 } 
             compiler: {id: -gcc-asan}
-            indices: [  { index64bit: 1, id: "-index64" } ]
+            indices: { index64bit: 1, id: "-index64" }
 
     steps:
       - name: Set up Docker Buildx
